--- a/src/assets/css/ganttChart.module.css
+++ b/src/assets/css/ganttChart.module.css
@@ -1,46 +1,50 @@
 .mainContainer {
-    margin: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
+.titleContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 400px;
+}
 h2 {
-    color: #FFEEAD;
-    font-size: 30px;
-    margin-bottom: 20px;
+  color: #ffeead;
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .ganttChartContainer {
-    width: 100%;
-    max-width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-    padding: 10px;
-    margin-top: 20px;
-    box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 10px;
+  margin-top: 20px;
+  box-sizing: border-box;
 }
 
 .ganttChart {
-    min-width: 1200px; 
+  min-width: 1200px;
 }
 
 .generateBtn {
-    padding: 15px 20px;
-    background-color: #A66E38;
-    border-radius: 40px;
-    margin-bottom: 20px;
-    border: none;
-    color: #FFEEAD;
-    font-size: 20px;
-    cursor: pointer;
-    max-width: 300px;
-    transition: background-color 0.3s ease;
+  padding: 15px 20px;
+  background-color: #a66e38;
+  border-radius: 40px;
+  margin-bottom: 20px;
+  border: none;
+  color: #ffeead;
+  font-size: 20px;
+  cursor: pointer;
+  max-width: 300px;
+  transition: background-color 0.3s ease;
 }
 
 .generateBtn:hover {
-    background-color: #8B5E2B; 
+  background-color: #8b5e2b;
 }
-
