--- a/src/assets/css/home.module.css
+++ b/src/assets/css/home.module.css
@@ -33,8 +33,10 @@ input {
   background-color: rgba(255, 173, 96, .9);
   padding: 10px;
   height: auto;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 }
 .rightContainer {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
   display: flex;
   justify-content: center;
   align-items: center;
