--- a/src/assets/css/home.module.css
+++ b/src/assets/css/home.module.css
@@ -17,6 +17,7 @@ input {
   flex-direction: column;
   margin: auto;
   padding: 20px;
+ 
 }
 .contentContainer {
   display: grid;
@@ -31,6 +32,56 @@ input {
     padding: 20px;
   }
 }
+
+@media (max-width: 1250px) {
+  .mainContainer {
+    transform: scale(0.9); 
+    transform-origin: top center; 
+  }
+}
+
+@media (max-width: 900px) {
+  .mainContainer {
+    transform: scale(0.8);
+    transform-origin: top center; 
+  }
+}
+
+@media (max-width: 800px) {
+  .mainContainer {
+    transform: scale(0.7);
+    transform-origin: top center; 
+  }
+}
+
+@media (max-width: 700px) {
+  .mainContainer {
+    transform: scale(0.6);
+    transform-origin: top center; 
+  }
+}
+
+@media (max-width: 600px) {
+  .mainContainer {
+    transform: scale(0.5);
+    transform-origin: top center; 
+  }
+}
+
+@media (max-width: 500px) {
+  .mainContainer {
+    transform: scale(0.4);
+    transform-origin: top center; 
+  }
+}
+
+@media (max-width: 400px) {
+  .mainContainer {
+    transform: scale(0.35);
+    transform-origin: top center; 
+  }
+}
+
 .leftContainer {
   display: flex;
   justify-content: flex-start;
