--- a/src/assets/css/loadingScreen.module.css
+++ b/src/assets/css/loadingScreen.module.css
@@ -1,30 +1,46 @@
-.loadingScreen {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.loadingScreenMain{
     background-color: #e2944b;
-    color: white;
 }
-
-
-h2{
-    font-size: 3rem;
-}   
-img{
-    top:100px;
-    width:500px;
-    height: auto;
-    cursor: pointer;
-    pointer-events: none;
+.loadingScreen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  max-height: 100%;
+  margin: auto ;
+  background-color: #e2944b;
+  color: white;
 }
-button{
-    background: none;
-    border:none;
-
+@media (max-width: 1250px) {
+    .loadingScreen {
+      transform: scale(0.9); 
+      transform-origin: center; 
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .loadingScreen {
+      transform: scale(0.5);
+      transform-origin: center; 
+    }
+  }
+h2 {
+  font-size: 3rem;
+}
+img {
+  /* top: 100px; */
+  width: 500px;
+  height: auto;
+  cursor: pointer;
+  /* margin: auto; */
+  pointer-events: none;
+}
+button {
+  background: none;
+  border: none;
 }
 
 .mainContent {
-    padding: 20px;
+  padding: 20px;
 }
