--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 body {
     background-color: #ffad60;
-    background-image: url('assets\img\sjn-bg.jpg'); /* Replace with your background image */
+    background-image: url('/sjn-bg.jpg'); /* Replace with your background image */
     background-size: cover; /* Cover the whole area */
     background-size: 120% auto;
     animation: moveBackground 50s linear infinite; /* Loop the animation */
